2018-08-28  Youenn Fablet  <youenn@apple.com>

        MediaDevices should be collectable as soon as its document is stopped
        https://bugs.webkit.org/show_bug.cgi?id=189021

        Reviewed by Eric Carlson.

        * http/tests/media/media-stream/collect-media-devices.https-expected.txt: Added.
        * http/tests/media/media-stream/collect-media-devices.https.html: Added.
        * http/tests/media/media-stream/resources/mymediadevicesframe.htm: Added.

2018-08-27  Myles C. Maxfield  <mmaxfield@apple.com>

        Null pointer deref in WidthIterator
        https://bugs.webkit.org/show_bug.cgi?id=188993

        Reviewed by Brent Fulgham.

        * fast/text/rtl-justification-expected.html: Added.
        * fast/text/rtl-justification.html: Added.

2018-08-27  Youenn Fablet  <youenn@apple.com>

        Various IndexDB tests abandon documents
        https://bugs.webkit.org/show_bug.cgi?id=188728
        <rdar://problem/43651095>

        Reviewed by Alex Christensen.

        * http/tests/IndexedDB/collect-IDB-objects.https-expected.txt: Added.
        * http/tests/IndexedDB/collect-IDB-objects.https.html: Added.
        * http/tests/IndexedDB/resources/myidbframe.htm: Added.
        * http/tests/IndexedDB/resources/support.js: Added.

2018-08-27  Rob Buis  <rbuis@igalia.com>

        XMLHTTPRequest.send for Document should have same Content-Type processing rules as String
        https://bugs.webkit.org/show_bug.cgi?id=188953

        Reviewed by Darin Adler.

        * platform/gtk/imported/w3c/web-platform-tests/xhr/setrequestheader-content-type-expected.txt:
        * platform/ios/imported/w3c/web-platform-tests/xhr/setrequestheader-content-type-expected.txt:
        * platform/wpe/imported/w3c/web-platform-tests/xhr/setrequestheader-content-type-expected.txt:

2018-08-24  Ryosuke Niwa  <rniwa@webkit.org>

        Add getModifierState to MouseEvent
        https://bugs.webkit.org/show_bug.cgi?id=188913
        <rdar://problem/43668772>
