@@ -1,3 +1,13 @@
+2018-08-28  Don Olmstead  <don.olmstead@sony.com>
+
+        Check for null renderer in canBeScrolledIntoView
+        https://bugs.webkit.org/show_bug.cgi?id=188935
+
+        Reviewed by Simon Fraser.
+
+        * fast/spatial-navigation/snav-display-contents-crash-expected.txt: Added.
+        * fast/spatial-navigation/snav-display-contents-crash.html: Added.
+
 2018-08-28  Youenn Fablet  <youenn@apple.com>
 
         MediaDevices should be collectable as soon as its document is stopped
